[package]
name = "waiter_di"
version = "1.6.5"
edition = "2018"
description = "Dependency injection"
keywords = [ "dependency-injection", "inversion-of-control", "di", "ioc"]
repository = "https://github.com/dmitryb-dev/waiter"
license = "MIT"
readme = "README.md"
authors = [ "dmitryb.dev@gmail.com" ]


[workspace]
members = [ "crates/*" ]

[dependencies]
waiter_codegen = { path = "crates/waiter_codegen", version = "*" }
serde = { version = "*", features = [ "derive" ] }
regex = "*"
lazy_static = "*"
log = "*"
config = { git = "https://github.com/hapejot/config-rs.git", version = "0.13.1" }

[features]
async = ["waiter_codegen/async"]
